--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
    <title>Pafac Funeraria</title>
 
    <!-- custom css file link  -->
@@ -298,21 +300,21 @@
    <div class="box-container">
 
       <div class="box" style="background:#009549;">
-         <img src="images/email.webp" alt="">
+         <i class="fas fa-envelope" style="font-size: 50px; color: white; "></i>
          <h3>email</h3>
          <a href="mailto:Pafacoficial@gmail.com" style="color: white;">contato@Pafacoficial.com</a>
          <a href="mailto:Pafacoficial@gmail.com" style="color: white;">Suporte@Pafacoficial.com</a>
       </div>
 
       <div class="box" style="background:#009549;">
-         <img src="images/phone.webp" alt="">
+         <i class="fas fa-phone" style="font-size: 50px; color: white;"></i>
          <h3>Telefone</h3>
          <a href="tel:1112223333" style="color: white;"> 74 93651-2805</a>
          <a href="tel:1234567890" style="color: white;"> 74 93651-2805</a>
       </div>
 
       <div class="box" style="background: #009549;">
-         <img src="images/location.webp" alt="">
+         <i class="fas fa-map-marker-alt" style="font-size: 50px; color: white;"></i>
          <h3>Endereço</h3>
          <a href="#" style="color: white;">Campim Grosso, Bahia, Brasil</a>
          <br>
