--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 
 <!-- home section ends -->
 
+<div class="apresentation">
+   <div class="text-content">
+      <h1 class="heading">LOREM IMPSUM</h1>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+   </div>
+   <img src="/images/capim-grosso-ba.jpg" alt="Descrição da Imagem" class="image">
+</div>
+
 <!-- features section starts  -->
 
 <section class="features">
