--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h1 class="heading">LOREM IMPSUM</h1>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
    </div>
-   <img src="/images/capim-grosso-ba.jpg" alt="Descrição da Imagem" class="image">
+   <img src="images/capim-grosso-ba.jpg" alt="Descrição da Imagem" class="image">
 </div>
 
 <!-- features section starts  -->
